layout/xul/nsMenuPopupFrame.h
@@ -193,7 +193,10 @@ class nsMenuPopupFrame final : public nsBoxFrame,
 
   bool HasRemoteContent() const;
 
-  // returns true if the popup is a panel with the noautohide attribute set to
+  // Whether we should create a widget on Init().
+  bool ShouldCreateWidgetUpfront() const;
+
+  // Returns true if the popup is a panel with the noautohide attribute set to
   // true. These panels do not roll up automatically.
   bool IsNoAutoHide() const;
 
@@ -206,8 +209,6 @@ class nsMenuPopupFrame final : public nsBoxFrame,
 
   nsresult CreateWidgetForView(nsView* aView);
   mozilla::StyleWindowShadow GetShadowStyle();
-
-  bool IsLeafDynamic() const override;
 
   void DidSetComputedStyle(ComputedStyle* aOldStyle) override;
 
@@ -223,9 +224,6 @@ class nsMenuPopupFrame final : public nsBoxFrame,
   // popup is being moved, and should not be flipped.
   nsresult SetPopupPosition(nsIFrame* aAnchorFrame, bool aIsMove,
                             bool aSizedToPopup);
-
-  // Force the children to be generated if they have not already been generated.
-  void GenerateFrames();
 
   // called when the Enter key is pressed while the popup is open. This will
   // just pass the call down to the current menu, if any. If a current menu
@@ -615,7 +613,6 @@ class nsMenuPopupFrame final : public nsBoxFrame,
   bool mIsContextMenu;  // true for context menus
   // true if we need to offset the popup to ensure it's not under the mouse
   bool mAdjustOffsetForContextMenu;
-  bool mGeneratedChildren;  // true if the contents have been created
 
   bool mMenuCanOverlapOSBar;  // can we appear over the taskbar/menubar?
   bool mShouldAutoPosition;   // Should SetPopupPosition be allowed to auto
